--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "bootstrap": "4.0.0-beta.2",
     "browserslist": "^2.11.3",
     "core-js": "^2.4.1",
+    "http": "0.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
